PoundPupLegacy/wwwroot/css/ppl.css
:root {
    --header-bg-color: linear-gradient(180deg, #2c2c2c 0%, #2c2c2c 100%);
    --content-bg-color: white;
    --nav-bg-color: #444;
    --nav-border-color: #808080;
    --footer-bg-color: #2c2c2c;
    --breadcrum-bg-color: #9aaddf;
    --term-bg-color: grey;
    --watermark-color: #999;
}

html {
    display: block;
}

body {
    display: flex;
    flex-direction: column;
    background: white;
    min-height: 100vh;
    height: 100%;
    width: 100%;
    color: #333;
    font-family: "Yanone Kaffeesatz", sans-serif;
    font-weight: 300;
    margin: 0;
    padding: 0;
}
header form {
    margin-top: 0.25em;
    margin-bottom: 0.25em;
}
header {
    background: var(--header-bg-color);
    margin: 0;
    user-select: none;
    display:flex;
    flex-direction: column;
    flex-wrap:wrap;
    flex-grow: 0;
    grid-template-columns: 10em auto;
}

header .logo {
    font-family: 'Raleway', sans-serif;
    margin-left: 0.25em;
    color: silver;
    flex-grow: 0;
    min-width: 10em;
}

header .logo .acronym {
    font-size: clamp(16px, 4vw, 36px);
    font-weight: 400;
}

header .logo .full-name {
    
}
header .central-header {
    flex-grow: 1;
	display: flex;
    flex-direction:column;
    flex-wrap: wrap;
}
    header .central-header form {
        margin-left: 0.25em;
    }
header .central-header form input[type=submit] {
    margin-left: 0.15em;
    margin-top: 0.15em;
}
header .central-header form input[name=search] {
    width: 8em;
}

header .subtitle {
    color: silver;
    padding-left: 0.25em;
    font-family: BhuTuka Expanded One;
    font-size: clamp(11px, 2vw, 24px);
    font-weight: 900;
    margin-top: 0.15em;
    margin-right: 1em;
}
@media screen and (min-width: 750px) {
    header {
        flex-direction: row;
    }

header .central-header {
    flex-direction: row;
    justify-content: center;
    align-items: center;
}
header .subtitle {
    text-align: center;
}
}
footer {
    border-top: solid thin black;
    border-bottom: solid thin black;
    background-color: var(--footer-bg-color);
    flex-grow: 0;
}
footer ul {
    margin: 0;
    margin-top: 0.5em;
    padding-left: 1em;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}
footer ul li {
    display: inline;
    margin-right: 0.5em;
    border-left: solid 2px #386fff;
    padding-left: 0.25em;
}
footer ul li a {
    font-size: 90%;
    color: silver;
    text-decoration: none;
}
footer h2 {
    font-size: clamp(24px, 6vw, 22px);
    color: #444;
    margin: 0.25em
}
.main {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    flex-grow: 1;
}
@media screen and (min-width: 450px) {
    .main {
        flex-direction: row;
    }
}
nav {
    background-color: var(--nav-bg-color);
    border-top: solid thin var(--nav-border-color);
    border-right: solid 1px var(--nav-border-color);
    min-width: 10em;
    flex-grow: 0;
}
nav ul {
    list-style-type: none;
    margin:0;
    padding:0;
}
nav ul a {
    color: silver;
    text-decoration: none;
}
nav ul li {
    background-color: #444;
    color:silver;
    border-bottom: solid 1px var(--nav-border-color);
    padding-left: 0.25em;
    padding-top: 0.25em;
    padding-bottom: 0.25em;
    padding-right: 0.25em;
}
nav ul li:hover {
    background-color: white;
}

nav form{
    width: 10em;
}
nav form input {
    margin-top: 0.25em;
}

nav form input[type=text], nav form input[type=password] {
    width: 8em;
    border: 0;
    padding: 0.15em;
    border-radius: 2px;
    margin-left: 0.15em;
}
input[type=text]{
    background-color: silver;
}

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active {
    -webkit-box-shadow: 0 0 0 30px silver inset !important;
}
nav form input[type="submit"] {
    background-color: white;
    padding: 0.5em;
    border-radius: 2px;
}
content {
    background-color: var(--content-bg-color);
    flex-grow: 1;
}
.article-with-comments, .blog-list, .articles {
    width: 100%;
    color: black;
    height: 100%;
}
.article-with-comments a, .blog-list a, .articles a {
    color: #002ea8;
    text-decoration: none;
}    

article {
    padding-left: 0.5em;
    padding-right: 0.5em;
}

.tags {

}
.article-with-comments .tags {
    background-color: var(--main-bg-color);
    margin-top: 1em;
    margin-bottom: 1.5em;
    padding: 0.5em;
}
.articles .tags {
}

.tag {
    margin-right: 0.5em;
}


article h1, .blog-list h1 {
    color: #444;
}


article .author{
    margin-bottom: 1em;
}
   
article .text{
    min-width: 20em;
}
.see-also-box {
    float: right;
    clear: right;
    width: 28%;
    min-width: 20em;
    padding-top: 0;
    padding-right: 1em;
    margin-top: 0;
    margin-left: 1em;
    margin-bottom: 1em;
    color: black;
    background-color: white;
    border: thin solid black;
    padding: 0.25em;
}

.see-also-box h2 {
}
.see-also-box ul {
    list-style-type: disc;
    margin-left: -1em;
}
.see-also-box ul li {
    padding-bottom: 0.25em;
}


.comment {
    margin-left: 2em;
    margin-top: 1em;
}
.comment-body {
    color: black;
    border: solid 1px black;
    border-radius: 5px 0 5px 0;
}
.comment .comment-content {
    padding: 0.5em 0.5em 0.5em 0.5em;
}
.comment .title {
    background-color: white;
}
.comment h2 {
    padding-left: 0.25em;
    color: black;
    margin: 0;
    font-size: 110%;
}
.comment .author {
    margin-bottom: 1em;
}
.comment-unpublished {
    
}
.comment{
    position:relative;
}

.comment-unpublished, .node-unpublished {
    background-color: #ddd;
}
.watermark {
    height: 0;
    overflow: visible;
    color: var(--watermark-color);
    font-size: 4em;
    line-height: 1;
    font-family: Impact,"Arial Narrow",Helvetica,sans-serif;
    font-weight: bold;
    text-transform: uppercase;
    text-align: center;
    word-wrap: break-word;
}

.breadcrum {
    background: var(--breadcrum-bg-color);
    color: black;
    margin: 0;
    padding-left: 0.5em;
    padding-bottom: 0.25em;
    padding-top: 0.25em;
    border-bottom: solid 1px var(--nav-border-color);
}

.breadcrum a {
    color: black;
    text-decoration: none;
}

.breadcrum-element::after {
    content: '>';
}
.breadcrum-element:last-of-type::after {
    content: '';
}

blockquote {
    border-left: solid 0.5em black;
    margin-left: 0;
    padding-left: 1em;
}
.blogs-list {
    width: 100%; 
    display: grid;
    grid-template-columns: 15fr 10fr 50fr 1fr;
}

.blogs-list div {
    padding: 0.5em;  
    height: 4em;
    margin-bottom: 1em;
    border-bottom: solid 1px grey;
}
.blogs-list div:nth-last-child(-n+4) {
    margin-bottom: 0;
    border-bottom: 0; 
}
.blogs-list div img {
    height: 4em;
}

.blog-teasers {
    display: grid;
}

img {
    object-fit: contain;
}

.blog-teaser {
    padding-bottom: 1.5em;
    border-bottom: solid thin black;
    clear: both;
    block-size: fit-content;
}
.blog-teaser:last-of-type{
    border-bottom: 0;
}
.blogs-list label{
    background-color: white;
    padding: 0.5em;
    color: black;
}

.term-names {
    display: grid; 
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
    grid-column-gap: 0.5em;
    padding: 0.5em;
}

.term-name {
    width: 100%;
    margin-bottom: 0.5em;
    text-align: center;
    padding-top: 1em;
    padding-bottom: 1em;
    background-color: var(--term-bg-color);
    border: solid thin black;
    border-radius: 5px;
}

.term-name:has(input:checked) {
    background-color: white; 
}

.term-name label{
    user-select: none;
    cursor: pointer;
    
}
.term-name input[type="checkbox"] {
    display: none;
}
td {
    border-left: solid 1px grey;
    border-bottom: solid 1px grey;
}
tr.subtotal{
    background-color: white;
}
tr.total {
    background-color: white;
}

.adoption-imports {
    width: 100%;
    display: grid;
    grid-template-columns: 25em auto;
    margin-top: 2em;
}
.adoption-import-numbers {
    display: grid;
    overflow-x: scroll;
}
.adoption-import-numbers .header-element, .adoption-import-numbers .adoption-import-value {
    padding-left: 0.15em;
    padding-right: 0.25em;
    border-left: solid 1px silver;
    border-bottom: solid 1px silver;
}
.adoption-import-countries .country-from {
    border-bottom: solid 1px silver;
}

.adoption-import-numbers .year-10000 {
    color: black;
}

.even {
    background-color: white;
}

.subtotal {
    background-color: white;
}

.total {
    background-color: white;
}
.section{
    }
th {
    border-top: solid thin grey;
    border-bottom: solid thin grey;
    text-align: left;
    background-color: #ccc;
}
th:first-of-type {
    border-left: solid thin grey;
}
th:last-of-type, td:last-of-type {
    border-right: solid thin grey;
}
tr:nth-of-type(2n+1){
    background-color: #eee;
}

.address{
    margin-bottom: 1em;
}

.address h4{
    margin-top: 0.75em;
    margin-bottom: 0.75em;
}

.article-with-comments h2 a {
    color: #444;
}

